Creacion de la estructura base con Flask de la app de infracciones

--- a/app/templates/dashboard.html
+++ b/app/templates/dashboard.html
@@ -48,7 +48,9 @@
             <th>Observaciones</th>
             <th>Latitud</th>
             <th>Longitud</th>
-            <th>Fecha</th>
+            <th>Fecha y Hora</th>
+            <th>IMG</th>
+            <th>Video</th>
           </tr>
         </thead>
         <tbody id="contenidoTabla">
