--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,12 +1,13 @@
+<!-- templates/index.html -->
 <!DOCTYPE html>
 <html lang="es">
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Iniciar Sesión</title>
-    <link rel="icon" href="../img/user.ico" type="image/x-icon">
+    <link rel="icon" href="{{ url_for('static', filename='img/user.ico') }}" type="image/x-icon">
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-    <link rel="stylesheet" href="../css/login.css">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/login.css') }}">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css">
 </head>
 <body>
@@ -18,8 +19,8 @@
 
             <label for="password"><i class="bi bi-lock-fill"></i> Contraseña</label>
             <div class="password-wrapper">
-                <input type="password" id="password" name="password" required minlength="6"
-                    placeholder="Mínimo 6 caracteres">
+                <input type="password" id="password" name="password" required minlength="10" maxlength="10"
+                    placeholder="Ingrese contraseña">
                 <button type="button" class="toggle-password" onclick="togglePassword()">
                     <i class="bi bi-eye-fill" id="eye-icon"></i>
                 </button>
@@ -29,5 +30,5 @@
         <p id="estado"></p>
     </div>
 </body>
-<script src="../scripts/login.js"></script>
+<script src="{{ url_for('static', filename='scripts/login.js') }}"></script>
 </html>
